# beginner-programming-server

./: Cargo.toml  README.md
data/: Hello
example website (rename to 'public' if not making it yourself)/: index.html
public/: index.html
src/: main.rs
