[package]
name = "beginner-programming-server"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
kvarn = { path = "kvarn", default-features = false, features = ["fs"] }
tokio = { version = "1.6.1", features = ["macros"] }
